Alerts being shown in the GUI
